syntax = "proto3";
option go_package = "pb";
package models;

import "google/protobuf/timestamp.proto";

message Health {
    string status = 1;
    string description = 2;
    string version = 3;
    google.protobuf.Timestamp startTime = 4;
    repeated DependencyHealth dependencies = 5;
}

message DependencyHealth {
    string name = 1;
    string url = 2;
    string status = 3;
    string significance = 4;
    google.protobuf.Timestamp lastUpdated = 5;
}